app/assets/stylesheets/application.css
/* Normalize */

article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em}pre{white-space:pre-wrap;word-wrap:break-word}q{quotes:\201C \201D \2018 \2019}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,html input[type=button],/* 1 */
input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}body,figure{margin:0}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}

/* Some fonts */

@font-face {
  font-family: 'Source Sans Pro';
  font-style: normal;
  font-weight: 700;
  src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/toadOcfmlt9b38dHJxOBGIqjGYJUyOXcBwUQbRaNH6c.woff) format('woff');
}

@font-face {
  font-family: 'Source Sans Pro';
  font-style: normal;
  font-weight: 400;
  src: local('Source Sans Pro'), local('SourceSansPro-Regular'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/ODelI1aHBYDBqgeIAH2zlNHq-FFgoDNV3GTKpHwuvtI.woff) format('woff');
}

@font-face {
  font-family: 'Source Sans Pro';
  font-style: italic;
  font-weight: 400;
  src: local('Source Sans Pro Italic'), local('SourceSansPro-It'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/M2Jd71oPJhLKp0zdtTvoM_bce-VcyLJMRR1FC9qWbU8.woff) format('woff');
}

@font-face {
  font-family: 'Source Sans Pro';
  font-style: normal;
  font-weight: 900;
  src: local('Source Sans Pro Black'), local('SourceSansPro-Black'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/toadOcfmlt9b38dHJxOBGC7eGk4PJkA83J1AXCmgUfc.woff) format('woff');
}

@font-face {
  font-family: 'Source Sans Pro';
  font-style: normal;
  font-weight: 600;
  src: local('Source Sans Pro Semibold'), local('SourceSansPro-Semibold'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/toadOcfmlt9b38dHJxOBGCmgpmuQqK2I-L2S9cF65Ek.woff) format('woff');
}

/* Anchors */

a, a:link {
  color: #000;
}

a:hover {
  color: #ff4747;
}

a:active {
  color: #000;
}

.meta a {
  color: #777;
}

.meta a:hover {
  color: #ff4747;
}

.meta a:active {
  color: #777;
}

.meta-header a:first-child {
  color: #ff4747;
}

.meta-header a:first-child:hover {
  color: #ff8888;
}

.meta-header a:first-child:active {
  color: #000;
}

.title:visited {
  color: #777;
}

.title:visited:hover {
  color: #ff4747;
}

.title:visited:active {
  color: #777;
}

/* Page structure */

* {
  margin: 0;
}

html {
  height: 100%;
}

body {
  font-family: "Source Sans Pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 400;
  margin: 0;
  top: 0;
  height: 100%;
}

.wrap > section, .wrap > header, body > footer {
  width: auto;
  max-width: 900px;
  margin: 0 auto;
  padding-left: 20px;
  padding-right: 20px;
}

.wrap > header, body > footer {
  line-height: 80px;
  text-align: right;
}

.wrap > header > section {
  border-bottom: 1px solid #FF8888;
}

.wrap > section {
  margin-top: 30px;
  padding-bottom: 121px
}

.wrap {
  min-height: 100%;
}

body > footer {
  margin-top: -111px;
  clear: both;
  position: relative;
}

body > footer > section {
	margin-top: 30px;
	border-top: 1px solid #FF8888;
	text-align: right;
}

.meta-header {
  display: inline;
}

/* Header Text */

h1 {
  display: block;
  font-size: 3em;
  position: absolute;
  -webkit-user-select: none;
   -khtml-user-select: none;
     -moz-user-select: none;
       -o-user-select: none;
          user-select: none;
}

h1 .beta {
  font-size: .3em;
  font-weight: 100;
  color: #666;
}

h1 a, h1 a:hover {
  text-decoration: none;
}

h1 a:hover .beta {
  color: #ff4747;
}

h1 a:active .beta {
  color: #666;
}

h2 {
  font-size: 2em;
}

h2.welcome {
  font-size: 3em;
  text-align: center;
}

/* Lists */

ol {
  padding-left: 0;
  list-style: none;
}

.wrap > section ol li {
  display: block;
  clear: both;
  margin-bottom: 30px;
}

.wrap > section ol li:last-child {
  margin-bottom: 0;
}

.wrap > section ol li .title {
  font-size: 1.25em;
  line-height: normal;
}

.meta {
  color: #777;
  font-size: .75em;
  line-height: normal;
}

/* Generic elements */

p {
  margin-bottom: 10px;
  margin-top: 10px;
}

.clearfix {
  clear: both;
}

.field_with_errors {
  display: inline-block;
}

form td {
  padding-right: 20px;
}

.red {
  color: #ff4747;
}

hr {
  margin-top: 20px;
  margin-bottom: 20px;
  border: 0;
  height: 1px;
  background: #AAA;
}

ul.qa li:nth-child(2n - 1) {
  font-weight: 600;
  font-size: 1.25em;
}

ul.qa li:nth-child(2n) {
  list-style: none;
  margin-bottom: 20px;
}

ul {
  padding-left: 0;
}

pre {
  white-space:pre-line;
}

/* Suffrage */
.order {
  width: 10px;
  float: left;
  text-align: right;
  line-height: 53px;
  -webkit-user-select: none;
   -khtml-user-select: none;
     -moz-user-select: none;
       -o-user-select: none;
          user-select: none;
}

.order span {
  float: right;
}

.suffrage {
  width: 40px;
  text-align: center;
  float: left;
  margin-top: -6px;
  font-size: 1.05em;
  position: relative;
  -webkit-user-select: none;
   -khtml-user-select: none;
     -moz-user-select: none;
       -o-user-select: none;
          user-select: none;
}

.up, .down {
  cursor: pointer;
  padding-left: 15px;
  padding-right: 15px;
  text-decoration: none;
}

.up {
  padding-bottom: 3px;
}

.down {
  padding-top: 3px;
}

.up:hover, .down:hover {
  color: #666;
}

.up:active, .down:active, .upactive .up, .downactive .down {
  color: #ff4747;
  cursor: default;
}

.upactive .up, .downactive .down {
  pointer-events: none;
}

.owner.upactive .down, .owner.downactive .up {
  color: #AAA;
  cursor: default;
  pointer-events: none;
}

.submission {
  margin-left: 50px;
}

/* Comments */

#new_comment {
  border: 1px solid #DDD;
  display: inline-block;
  padding: 10px;
}

#comment_body {
  height: 100px;
  width: 300px;
  max-width: 813px;
  padding: 5px;
  margin-bottom: 10px;
}

#comment_body:focus {
  outline: 0;
  border: 1px solid #FF8888;
}

.comment {
  display: inline-block;
  border: 1px solid #DDD;
  width: 368px;
  padding: 10px;
}

.comment .meta {
  display: block;
}

.comment p {
  margin: 0;
  margin-left: 30px;
}

.comment .suffrage {
  margin-left: -10px;
}

.comment-photo {
  float: left;
  border: 1px solid #CCC;
  margin-right: 10px;
  width: 41px;
  height: 41px;
}

.comment-submit {
  float: right;
}

.show-li {
  margin-bottom: 20px;
}

/* Profiles */

#profile {
  display: block;
  padding: 10px;
  padding-left: 0;
}

#profile-content {
	display: inline;
}

.profile-photo {
	float: left;
  border: 1px solid #CCC;
  margin-right: 10px;
  width: 80px;
  height: 80px;
}

/* Flash Notices */

#flash_notice {
  border: 1px solid #777;
  color: #000;
  padding: 10px;
}

/* iPhone size */

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
  body {
    zoom: 200%;
  }
}

